# fitest-lang

./: Makefile  README.md  pyproject.toml
src/fitest_lang/: athlete.py  baseobject.py  dsl.py  expression.py  movement.py  program.py  quantity.py  timer.py
src/fitest_lang/config/: dsl.tx
tests/: test_fitest_lang.py
